--- a/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/cause/create/create.component.html
+++ b/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/cause/create/create.component.html
@@ -1,25 +1,29 @@
 <div class="col-md-4"></div>
 <div class="col-md-4">
     <h1 class="text-italic">Creating my own cause</h1>
-    <form action="">
+    <form [formGroup]="form" (ngSubmit)="createCauseHandler()">
         <div class="form-group">
             <label for="cause">Cause</label>
-            <input type="text" id="cause" class="form-control" placeholder="My cause is ...">
+            <input type="text" formControlName="cause" id="cause" class="form-control" placeholder="My cause is ..." minlength="10">
+            <p class="error-message" *ngIf="form.get('cause').invalid && form.get('cause').touched">Enter cause name!</p>
         </div>
         <div class="form-group">
             <label for="neededAmount">Needed amount</label>
-            <input type="number" min="10" id="neededAmount" class="form-control" placeholder="I need ...">
+            <input type="number" formControlName="neededAmount" id="neededAmount" class="form-control" placeholder="I need ...">
+            <p class="error-message" *ngIf="form.get('neededAmount').invalid && form.get('neededAmount').touched">Needed amount must be 100 or greater!</p>
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <textarea name="description" id="description" cols="30" rows="10" class="form-control cause-description"
+            <textarea formControlName="description" id="description" cols="30" rows="10" class="form-control cause-description"
                 placeholder="A little bit information about this cause. What is meaning to you?"></textarea>
-        </div>
+            <p class="error-message" *ngIf="form.get('description').invalid && form.get('description').touched">Please enter description!</p>
+            </div>
         <div class="form-group">
             <label for="imageUrl">Image URL</label>
-            <input type="text" id="imageUrl" class="form-control" placeholder="https://...">
+            <input type="text" id="imageUrl" formControlName="imageUrl" class="form-control" placeholder="https://..." pattern="https?:\/\/.*">
+            <p class="error-message" *ngIf="form.get('imageUrl').invalid && form.get('imageUrl').touched">Please enter a valid URL!</p>
         </div>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button [disabled]="form.invalid" class="btn btn-primary">Create</button>
     </form>
 </div>
 <div class="col-md-4"></div>
