--- a/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/login/login.component.html
+++ b/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/login/login.component.html
@@ -1,17 +1,18 @@
 <div class="col-md-4"></div>
 <div class="col-md-4">
     <h1 class="text-italic">Login</h1>
-    <form action="">
+    <form #loginForm="ngForm" (ngSubmit)="handleLogin(loginForm.value)">
         <div class="form-group">
             <label for="email">Email address</label>
-            <input #emailInput type="text" id="email" class="form-control" placeholder="john.doe@domain.bg">
+            <input #emailInput="ngModel" type="text" ngModel name="email" id="email" class="form-control" placeholder="john.doe@domain.bg" [pattern]="emailRegex" required>
+            <p class="error-message" *ngIf="emailInput.invalid && emailInput.touched">Invalid Email!</p>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input #passwordInput type="password" id="password" class="form-control" placeholder="************">
+            <input #passwordInput="ngModel" required minlength="6" type="password" ngModel name="password" id="password" class="form-control" placeholder="************">
+            <p class="error-message" *ngIf="passwordInput?.errors?.required && passwordInput.touched">Please enter a password!</p>
         </div>
-
-        <button type="button" class="btn btn-success" (click)="login(emailInput.value, passwordInput.value)">Login</button>
+        <button [disabled]="loginForm.invalid" class="btn btn-success">Login</button>
     </form>
     <p>Don't have account yet? <a routerLink="/user/register">Register</a>.</p>
 </div>
