--- a/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/register/register.component.html
+++ b/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/register/register.component.html
@@ -1,18 +1,22 @@
 <div class="col-md-4"></div>
 <div class="col-md-4">
     <h1 class="text-italic">Register</h1>
-    <form action="">
+    <form #registerForm="ngForm">
         <div class="form-group">
             <label for="email">Email address</label>
-            <input type="text" id="email" class="form-control" placeholder="john.doe@domain.bg">
+            <input #emailInput="ngModel" type="text" ngModel name="email" id="email" class="form-control" placeholder="john.doe@domain.bg" pattern="[a-zA-z0-9-._]{6,}@gmail\.com" required>
+            <p class="error-message" *ngIf="emailInput.invalid && emailInput.touched">Invalid Email!</p>
         </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" placeholder="************">
-        </div>
-        <div class="form-group">
-            <label for="rePassword">Re-Password</label>
-            <input type="password" id="rePassword" class="form-control" placeholder="************">
+        <div #passwordsGroup="ngModelGroup" ngModelGroup="passwords" appPasswordMatch>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input ngModel [ngClass]="{'password-match-invalid' : passwordsGroup.invalid, 'password-match-touched' : passwordsGroup.touched}" type="password" name="password" id="password" class="form-control" placeholder="************" required minlength="6">
+            </div>
+            <div class="form-group">
+                <label for="rePassword">Re-Password</label>
+                <input ngModel [ngClass]="{'password-match-invalid' : passwordsGroup.invalid, 'password-match-touched' : passwordsGroup.touched}" type="password" name="rePassword" id="rePassword" class="form-control" placeholder="************" required>
+            </div>
+            <p class="error-message" *ngIf="passwordsGroup.touched && passwordsGroup.invalid">Password and repeat password don't match!</p>
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
