--- a/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/user/profile/profile.component.html
+++ b/05. Angular-Workshop-Part3/Workshop - Part 3/causes/src/app/user/profile/profile.component.html
@@ -1,24 +1,31 @@
 <div class="col-md-6 profile-info">
     <div class="panel panel-default">
         <div class="text-underline panel-body panel-primary">
-            Logged as: <span class="text-bold">{{currentUser}}</span>
+            Logged as: <span class="text-bold">{{currentUser.email}}</span>
             <a class="float-right custom-button btn btn-danger" (click)="logout()">Logout</a>
         </div>
         <div class="panel-footer">
-            <form action="">
+            <form [formGroup]="form">
                 <div class="form-group">
                     <label for="email">New address</label>
-                    <input type="text" id="newEmail" class="form-control" placeholder="john.doe@domain.bg">
+                    <input formControlName="email" type="text" id="newEmail" class="form-control"
+                        placeholder="john.doe@domain.bg">
+                    <p class="error-message" *ngIf="form.get('email').invalid && form.get('email').touched">Invalid Email!</p>
                 </div>
-                <div class="form-group">
-                    <label for="password">New Password</label>
-                    <input type="password" id="password" class="form-control" placeholder="************">
+                <div class="form-group" formGroupName="passwords">
+                    <div class="form-group">
+                        <label for="password">New Password</label>
+                        <input [ngClass]="{'password-match-invalid' : form.get('passwords').invalid, 'password-match-touched' : form.get('passwords').touched}" formControlName="password" type="password" id="password" class="form-control"
+                            placeholder="************">
+                    </div>
+                    <div class="form-group">
+                        <label for="rePassword">Re-Password</label>
+                        <input [ngClass]="{'password-match-invalid' : form.get('passwords').invalid, 'password-match-touched' : form.get('passwords').touched}" formControlName="rePassword" type="password" id="rePassword" class="form-control"
+                            placeholder="************">
+                    </div>
+                    <p class="error-message" *ngIf="form.get('passwords').touched && form.get('passwords').invalid">Password and repeat password don't match!</p>
                 </div>
-                <div class="form-group">
-                    <label for="rePassword">Re-Password</label>
-                    <input type="password" id="rePassword" class="form-control" placeholder="************">
-                </div>
-                <button type="submit" class="btn btn-primary">Change profile information</button>
+                <button [disabled]="form.invalid" class="btn btn-primary">Change profile information</button>
             </form>
         </div>
     </div>
